syntax = 'proto3';

package AUTH;

service UserService{
  rpc CreateUser(CreateUserDto) returns (User) {}
  rpc FindAllUsers (Empty) returns (Users) {}
  rpc FindOneUser(FindOneUserDto) returns (User){}
  rpc UpdateUser (UpdateUserDto) returns (User){}
  rpc RemoveUser (FindOneUserDto) returns (User){}
  rpc QueryUsers (stream PaginationDto) returns (stream Users) {}

}

message PaginationDto {
  int32 page = 1;
  int32 skip = 2;
}

message UpdateUserDto {
  string id = 1;
  SocialMedia socialMedia =2;
}

message FindOneUserDto{
  string  id = 1;
}

message Users {
  repeated User users = 1;
}

message Empty{}

message CreateUserDto {
  string firstName = 1;
  string lastName = 2;
  string password = 3;
  optional int32 age = 4;
}

message User {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string password = 4;
  int32 age = 5;
  bool active = 6;
  SocialMedia socialMedia = 7;
}

message SocialMedia{
  optional  string twitterUrl = 1;
  optional  string fbUrl = 2;
}
